# bash-vsv

./: CHANGES.md  Cargo.toml  LICENSE  Makefile  README.md  vsv
benchmarks/: .gitignore  make-test-dirs
man/: vsv.8  vsv.md
old/: vsv
src/: arguments.rs  config.rs  die.rs  main.rs  runit.rs  service.rs  utils.rs
src/commands/: enable_disable.rs  external.rs  mod.rs  status.rs
test/: .gitignore  make-test-dirs
tests/: basic.rs  integration.rs
tests/common/: mod.rs
