[package]
name = "vsv"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bahamas10/rust-vsv"
license = "MIT License"

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.1", features = ["cargo", "derive"] }
dirs = "4.0.0"
libc = "0.2.119"
rayon = "1.5.1"
yansi = "0.5.0"

[features]

[dev-dependencies]
assert_cmd = "2.0.4"
